--- a/Makedefs.in
+++ b/Makedefs.in
@@ -69,9 +69,9 @@ top_srcdir	=	@top_srcdir@
 #
 
 ARFLAGS		=	@ARFLAGS@
-CFLAGS		=	-I.. @CFLAGS@ @LARGEFILE@ $(OPTIM) @JPEGINC@ @PNGINC@ @ZLIBINC@
+CFLAGS		=	-I.. @CFLAGS@ @LARGEFILE@ $(OPTIM) -fPIC @JPEGINC@ @PNGINC@ @ZLIBINC@
 CPPFLAGS	=	@CPPFLAGS@
-CXXFLAGS	=	-I.. @CXXFLAGS@ @LARGEFILE@ $(OPTIM) @JPEGINC@ @PNGINC@ @ZLIBINC@
+CXXFLAGS	=	-I.. @CXXFLAGS@ @LARGEFILE@ $(OPTIM) -fPIC @JPEGINC@ @PNGINC@ @ZLIBINC@
 LDFLAGS		=	@LDFLAGS@ $(OPTIM)
 LIBS		=	@SSLLIBS@ @LIBS@
 OPTIM		=	@OPTIM@ @SSLFLAGS@
